added event save and delete funtionality for the user

--- a/src/components/Navbar/CourseNav.style.client.css
+++ b/src/components/Navbar/CourseNav.style.client.css
@@ -30,4 +30,16 @@
     margin-left: 10px;
 }
 
+.back {
+    background-color: brown;
+}
+
+.wbdv-add-course{
+    background-color: white;
+}
+
+.wbdv-course-manager{
+    color: white;
+}
+
 
