--- a/src/components/Events/Events.style.client.css
+++ b/src/components/Events/Events.style.client.css
@@ -41,3 +41,11 @@
     margin-left: 20px;
     margin-right: 20px;
 }
+
+.search-btn{
+    margin-left: 20px;
+}
+
+.search-input{
+    margin-left: 30px;
+}
