--- a/src/containers/HomePage/HomePage.style.client.css
+++ b/src/containers/HomePage/HomePage.style.client.css
@@ -14,3 +14,16 @@ h1{
 .container-fluid{
     text-align: center;
 }
+
+.container {
+    text-align: center;
+    margin-top: 60px;
+}
+
+.container-home {
+    background-color: firebrick;
+    color: white;
+    position: absolute;
+    width: 100%;
+    height: 100%
+}
